fix: cups stretching and not being where they should be

--- a/src/styles/level.css
+++ b/src/styles/level.css
@@ -23,12 +23,15 @@
 
 .level > .level__right {
   position: relative;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   background: var(--secondary);
 }
 
 .level > .level__right > canvas {
-  width: 100%;
+  max-height: 100vh;
+  max-width: 100%;
   display: inline;
 }
 
